--- a/WEB-DEV/WEEK-1/index.html
+++ b/WEB-DEV/WEEK-1/index.html
@@ -12,7 +12,7 @@
                 <nav>
                     <a href="#">Home</a>
                     <a href="#">About</a>
-                    <a href="#">Contact Us</a>
+                    <a href="#footer">Contact Us</a>
                 </nav>
             </header>
             <!-- main content -->
@@ -42,7 +42,7 @@
             </main>
 
             <!-- footer -->
-            <footer>
+            <footer id="footer">
                 <p>&copy; 2025. Narman. All Rights Reserved.</p>
             </footer>
         </body>
