Starting over was one mountain to move so I had to ctrl+c ctrl+v my portfolio

--- a/HACKATHONS/Hackathon1/My-portfolio/index.html
+++ b/HACKATHONS/Hackathon1/My-portfolio/index.html
@@ -3,68 +3,104 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Godrick Narman | Portfolio</title>
+
+  <!-- Favicons-->
+  <link rel="apple-touch-icon" sizes="180x180" href="Resources/Favicons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="Resources/Favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="Resources/Favicons/favicon-16x16.png">
+  <link rel="manifest" href="Resources/Favicons/site.webmanifest">
+
+  <title>MrNarman</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="Resources/Favicons/favicon.ico" type="image/x-icon">
 </head>
 <body>
-
-  <!-- Header & Branding -->
-  <header class="header">
+  <header>
     <h1>G•N•M</h1>
+    
     <div class="social-icons">
       <a href="https://github.com/MrNarman" target="_blank" aria-label="GitHub">
-        <img src="Resources/Icons/github.svg" alt="GitHub" /><span>GitHub</span>
+        <img src="Resources/Icons/github.svg" alt="GitHub" />
+        <span>GitHub</span>
       </a>
-      <a href="https://linkedin.com/in/godrick-mwani-856415262/" target="_blank" aria-label="LinkedIn">
-        <img src="Resources/Icons/linkedin.svg" alt="LinkedIn"/><span>LinkedIn</span>
+      <a href="https://www.linkedin.com/in/godrick-mwani-856415262/" target="_blank" aria-label="LinkedIn">
+        <img src="Resources/Icons/linkedin.svg" alt="LinkedIn" />
+        <span>LinkedIn</span>
       </a>
       <a href="mailto:godricknarman21@gmail.com" aria-label="Email">
-        <img src="Resources/Icons/email_3.svg" alt="Email"/><span>Email</span>
+        <img src="Resources/Icons/email_3.svg" alt="Gmail" />
+        <span>Email</span>
       </a>
     </div>
   </header>
-
-  <!-- Main Content -->
+  
   <main>
-    <!-- Intro Section -->
-    <section class="intro-container">
+    <div class="intro-container">
       <div class="intro-text">
         <h2 class="home-name">Hello, I am MrNarman</h2>
-        <p>Welcome to my corner of the digital world—where brilliance intertwines with code, and innovation finds its true purpose. I’m deeply immersed in AI, ML, and the art of programming. This space reflects the journey, passion, and creative drive behind my work.</p>
-        <a href="#about" class="button">About Me</a>
+        <p>
+          Welcome to my corner of the digital world—where brilliance intertwines with code, and innovation finds its true purpose.
+          I am deeply immersed in the realms of Machine Learning, Artificial Intelligence, and the art of programming itself.
+          This space serves as a canvas, expressing the ideas, passion, and vision that words alone may struggle to convey.
+          Whether you're here to explore, connect, or draw inspiration, I'm honored that you’ve ventured into this journey with me.
+        </p>
+        <a class="button" href="#about" target="_self">About Me</a>
       </div>
+      
       <div class="intro-image">
-        <img src="Resources/Images/my_ghibli_copy.jpg" alt="Godrick Narman" />
+        <img src="Resources/Images/001.png" alt="Godrick Narman" />
       </div>
-    </section>
-
-    <!-- About / Education / Interests -->
-    <section id="about" class="about-container">
-      <div class="about-item">
-        <h2>Who I am</h2>
-        <p>I am Godrick Narman, a purpose-driven tech enthusiast with a passion for innovation in AI and ML. Each line of code I write is a step toward building something that truly matters.</p>
-        <p class="quote">“Built for Legacy”</p>
-      </div>
-      <div class="about-item">
-        <h2>Education</h2>
-        <p><b>BSc. in Computer Science & Technology</b><br>Maseno University, Kenya (2022–Present)</p>
-      </div>
-      <div class="about-item">
-        <h2>My Interests</h2>
-        <p>AI, Machine Learning, Robotics, chess, poetry, books, and coding creatively.</p>
-      </div>
-      <div class="about-item">
-        <h2>Experience</h2>
-        <p>Working on AI and robotics projects, exploring innovation and continuously learning in real application contexts.</p>
-        <a href="Resources/CV/20250212_Godrick‑Mwani_CV.pdf" class="button">Download CV</a>
+    </div>
+  
+    <!-- About Me Section -->
+    <section id="about">
+      <div class="about-container">
+        <div class="about-item">
+          <h2>Who I am</h2>
+          <p>
+            I am Godrick Narman, a purpose-driven tech enthusiast, deeply passionate about the transformative power of Artificial Intelligence, Machine Learning, and the art of creative problem-solving.
+            My journey is fueled by an insatiable curiosity and an unwavering belief that technology holds the key to reshaping lives.
+            I am driven by the pursuit of turning ideas into tangible solutions, ever-growing through continuous learning, and leaving a legacy forged through impactful innovation.
+            Each line of code I write is not just a task—it's a step towards building something that truly matters.
+          </p>
+          <p style="font-style: italic; font-weight: 600; color: #00B4D8; margin-top: 1rem;">
+            “Built for Legacy”
+          </p>
+        </div>
+  
+        <div class="about-item">
+          <h2>Education</h2>
+          <p>
+            <b>BSc. in Computer Science and Technology:</b> <i><br>Maseno University, Kenya (2022-Present)<br><br></i>
+            A comprehensive study of computer science, programming, data structures, algorithms, and emerging technologies. I'm gaining hands-on experience in problem-solving and building tech solutions, ready to apply knowledge in the real world.
+          </p>
+        </div>
+  
+        <div class="about-item">
+          <h2>My Interests</h2>
+          <p>
+            I am deeply intrigued by AI, Machine Learning, and Robotics, as well as the endless possibilities of technology to shape the future.
+            Outside of tech, I find solace in the strategy and complexity of chess, the creative exploration of coding, and the joy of reading books.
+            Though not professionally, poetry allows me to express my thoughts in a more artistic way, and on occasion, I indulge in watching movies for a bit of relaxation and inspiration.
+            These interests, varied yet interconnected, fuel my curiosity and drive for innovation.
+          </p>
+        </div>
+  
+        <div class="about-item">
+          <h2>Experience</h2>
+          <p>
+            While I am still in the early stages of my journey, I have worked on several projects, exploring AI applications and robotics systems. 
+            These experiences have sparked a deeper interest in these fields, and I am always eager to learn, collaborate, and grow through new opportunities.
+          </p>
+          <a href="Resources/CV/20250212_Godrick-Mwani_CV.pdf" class="button" download>Download CV</a>
+        </div>
       </div>
     </section>
   </main>
-
-  <!-- Footer -->
+  
   <footer>
-    <p>© 2025 Godrick Narman | Built for Legacy</p>
+    <p>&copy; 2025 Godrick Narman | Built for Legacy</p>
   </footer>
 </body>
 </html>
