Made initial changes to the about  section

--- a/HACKATHONS/Hackathon1/My-portfolio/index.html
+++ b/HACKATHONS/Hackathon1/My-portfolio/index.html
@@ -54,7 +54,7 @@
     </div>
   
     <!-- About Me Section -->
-    <section id="about">
+    <!-- <section id="about">
       <div class="about-container">
         <div class="about-item">
           <h2>Who I am</h2>
@@ -96,7 +96,37 @@
           <a href="Resources/CV/20250212_Godrick-Mwani_CV.pdf" class="button" download>Download CV</a>
         </div>
       </div>
+    </section> -->
+    <section id="about" class="about-section">
+        <h2>About Me</h2>
+        <div class="about-content">
+            <div class="about-image">
+            <img src="Resources/Images/003.jpg" alt="Godrick Narman">
+            </div>
+            <div class="about-text">
+            <h3>Hey, I'm Godrick Narman</h3>
+            <p>I’m a purpose-driven tech enthusiast from Kenya, passionate about AI, Machine Learning, and building meaningful solutions through code. With a strong foundation in Python and web development, I’m on a mission to grow, contribute, and lead in the tech world.</p>
+            
+            <table class="about-table">
+                <tr>
+                <td><strong>🎂 Age:</strong></td>
+                <td>21</td>
+                </tr>
+                <tr>
+                <td><strong>📍 Location:</strong></td>
+                <td>Maseno, Kenya</td>
+                </tr>
+                <tr>
+                <td><strong>✉️ Email:</strong></td>
+                <td>godricknarman21@gmail.com</td>
+                </tr>
+            </table>
+
+            <a href="Resources/CV/Godrick_CV.pdf" class="btn" target="_blank">Download CV</a>
+            </div>
+        </div>
     </section>
+
   </main>
   
   <footer>
