Added the projects section

--- a/HACKATHONS/Hackathon1/My-portfolio/index.html
+++ b/HACKATHONS/Hackathon1/My-portfolio/index.html
@@ -97,7 +97,7 @@
         </div>
       </div>
     </section> -->
-    <section id="about" class="about-section">
+  <section id="about" class="about-section">
         <h2>About Me</h2>
         <div class="about-content">
             <div class="about-image">
@@ -105,27 +105,53 @@
             </div>
             <div class="about-text">
             <h3>Hey, I'm Godrick Narman</h3>
-            <p>I’m a purpose-driven tech enthusiast from Kenya, passionate about AI, Machine Learning, and building meaningful solutions through code. With a strong foundation in Python and web development, I’m on a mission to grow, contribute, and lead in the tech world.</p>
-            
+            <p>
+                I’m a purpose-driven tech enthusiast from Kenya, passionate about AI, Machine Learning, and building meaningful solutions through code.
+                With a strong foundation in Python and web development, I’m on a mission to grow, contribute, and lead in the tech world.
+            </p>
+
             <table class="about-table">
-                <tr>
-                <td><strong>🎂 Age:</strong></td>
-                <td>21</td>
-                </tr>
                 <tr>
                 <td><strong>📍 Location:</strong></td>
                 <td>Maseno, Kenya</td>
                 </tr>
-                <tr>
-                <td><strong>✉️ Email:</strong></td>
-                <td>godricknarman21@gmail.com</td>
-                </tr>
             </table>
 
             <a href="Resources/CV/Godrick_CV.pdf" class="btn" target="_blank">Download CV</a>
+
+            <!-- 📚 Education Section -->
+            <div class="education">
+                <h3>🎓 Education</h3>
+                <ul class="education-list">
+                <li><strong>BSc. in Computer Science & Technology</strong> – Maseno University</li>
+                <li>Expected Graduation: 2026</li>
+                <a href="#projects" class="btn">PROJECTS</a>
+                </ul>
+            </div>
+
             </div>
         </div>
     </section>
+
+    <!-- Projects section -->
+     <section id="projects" class="projects-section">
+  <h2>Projects</h2>
+  <div class="projects-container">
+    
+    <div class="project-card">
+      <h3>Tic Tac Toe Game</h3>
+      <p>A Python terminal-based game built with my friend BackendSid22. A simple and fun way to practice logic and turn-based systems.</p>
+      <a href="https://github.com/MrNarman/tic-tac-toe-python" target="_blank" class="btn">View on GitHub</a>
+    </div>
+
+    <div class="project-card">
+      <h3>Personal Portfolio</h3>
+      <p>This very portfolio was built using only HTML and CSS for a hackathon challenge. Clean, responsive, and minimal.</p>
+      <a href="https://github.com/MrNarman/plp-portfolio" target="_blank" class="btn">View on GitHub</a>
+    </div>
+    <!-- Add more projects here -->
+  </div>
+</section>
 
   </main>
   
