Final steps- updated readme and images

--- a/HACKATHONS/Hackathon1/My-portfolio/index.html
+++ b/HACKATHONS/Hackathon1/My-portfolio/index.html
@@ -53,7 +53,7 @@
         <h2>About Me</h2>
         <div class="about-content">
             <div class="about-image">
-            <img src="Resources/Images/003.jpg" alt="Godrick Narman">
+            <img src="Resources/Images/002.jpg" alt="Godrick Narman">
             </div>
             <div class="about-text">
             <h3>Hey, I'm Godrick Narman</h3>
@@ -64,8 +64,20 @@
 
             <table class="about-table">
                 <tr>
-                <td><strong>📍 Location:</strong></td>
-                <td>Maseno, Kenya</td>
+                <!-- <td><strong>📍 Location:</strong></td>
+                <td>Maseno, Kenya</td> -->
+                <td>Python</td>
+                <td>JavaScript</td>
+                <td>HTML & CSS</td>
+                <td>Machine Learning</td>
+                </tr>
+                <tr>
+
+                <td>Python</td>
+                <td>JavaScript</td>
+                <td>HTML & CSS</td>
+                <td>Machine Learning</td>
+
                 </tr>
             </table>
 
@@ -101,8 +113,12 @@
       <p>This very portfolio was built using only HTML and CSS for a hackathon challenge. Clean, responsive, and minimal.</p>
       <a href="https://github.com/MrNarman/plp-portfolio" target="_blank" class="btn">View on GitHub</a>
     </div>
+    
     <!-- Add more projects here -->
   </div>
+
+    <p>More projects coming soon! Stay tuned.</p>
+    <a href="#contact" class="btn">CONTACT ME</a>
 </section>
 
 <!-- Contact -->
