Added the missing hosted links

--- a/HACKATHONS/Hackathon1/My-portfolio/index.html
+++ b/HACKATHONS/Hackathon1/My-portfolio/index.html
@@ -63,21 +63,20 @@
             </p>
 
             <table class="about-table">
+                <caption>Languages & Tools Proficiency</caption>
                 <tr>
-                <!-- <td><strong>📍 Location:</strong></td>
-                <td>Maseno, Kenya</td> -->
                 <td>Python</td>
-                <td>JavaScript</td>
                 <td>HTML & CSS</td>
-                <td>Machine Learning</td>
+                <td>MySql</td>
                 </tr>
+                 <tr>
+                <td>git and github</td>
+                </tr>
+                
                 <tr>
-
-                <td>Python</td>
-                <td>JavaScript</td>
-                <td>HTML & CSS</td>
-                <td>Machine Learning</td>
-
+                <td>OS: UBUNTU</td>
+                <td>VS Code</td>
+                <td>Pycharm</td>
                 </tr>
             </table>
 
@@ -104,7 +103,7 @@
     
     <div class="project-card">
       <h3>Tic Tac Toe Game</h3>
-      <p>A Python terminal-based game built with my friend BackendSid22. A simple and fun way to practice logic and turn-based systems.</p>
+      <p>A Python terminal-based game built with my friend <a href="https://github.com/mathncode-sid" target="_blank">mathncode-sid</a>. A simple and fun way to practice logic and turn-based systems.</p>
       <a href="https://github.com/MrNarman/tic-tac-toe-python" target="_blank" class="btn">View on GitHub</a>
     </div>
 
