--- a/WEB-DEV/WEEK-1/index.html
+++ b/WEB-DEV/WEEK-1/index.html
@@ -1,49 +1,45 @@
 <!DOCTYPE html>
-    <html>
-        <head>
-            <title>My First Web Page</title>
-        </head>        
-        <body>
-            <!-- semantic html -->
-            <!-- header -->
-            <header>
-                <h1>Welcome to My Web Page</h1>
-                <!-- navigation bar -->
-                <nav>
-                    <a href="#">Home</a>
-                    <a href="#">About</a>
-                    <a href="#footer">Contact Us</a>
-                </nav>
-            </header>
-            <!-- main content -->
-            <main>
-                <article>
-                    <p>This is my first page.</p>
-                    <p>Isn't this amazing!</p>
-                </article>
-                <section>
-                    <h2>My Favorite Hobbies</h2>
-                    <ul>
-                        <li>Reading</li>
-                        <li>Cycling</li>
-                        <li>Cooking</li>
-                    </ul>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content=" A simple web page by godrick narman">
+    <meta name="keywords" content="HTML, Web Development, Narman, MrNarman">
+    <meta name="author" content="godrick narman">
+    <title>godrick narman</title>
+</head>
+<body>
+    <h1>Welcome to My Web Page</h1>
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#footer">Contact Us</a>
+    </nav>
+    <main>
+        <h2>My First Web Page</h2>
+        <article>
+            <p>This is my first page.</p>
+            <p>Isn't this amazing!</p>
+        </article>
+        <section>
+            <h2>My Favorite Hobbies</h2>
+            <ul>
+                <li>Reading</li>
+                <li>Cycling</li>            
+                <li>Cooking</li>
+            </ul>
+            <ol type="i">
+                <li>Reading</li>
+                <li>Cycling</li>        
+                <li>Cooking</li>
+            </ol>
+        </section>
 
-                    <ol type="i">
-                        <li>Reading</li>
-                        <li>Cycling</li>
-                        <li>Cooking</li>
-                    </ol>
-                </section>
-                <aside>
-                    <h3>Quick Links</h3>
-                    <a href="#">Additional Resources</a>
-                </aside>
-            </main>
+    </main>
 
-            <!-- footer -->
-            <footer id="footer">
-                <p>&copy; 2025. Narman. All Rights Reserved.</p>
-            </footer>
-        </body>
-    </html>
+    <footer id="footer">
+        <p>&copy; 2025. Narman. All Rights Reserved.</p>
+    </footer>
+    
+</body>
+</html>
